[tool.poetry]
name = "plot-helper"
version = "0.1.0"
description = "A context manager for matplotlib figures. It creates a new pair of figure/axes upon entry and saves, plots, and clears the figure on exit."
authors = ["Saad Khan <skhan8@mail.einstein.yu.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
matplotlib = "^3.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
